k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: k8s-ingress-demo
  labels:
    name: k8s-ingress-demo
